[tool.poetry]
name = "termedit"
version = "0.1.0"
description = "A terminal based file editor"
authors = ["DrgnFireYellow <86269995+DrgnFireYellow@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
